Get base Flaying Blade in. Still need to get it to drop flesh on hit

--- a/src/main/resources/assets/wendigo/lang/en_us.json
+++ b/src/main/resources/assets/wendigo/lang/en_us.json
@@ -1,3 +1,5 @@
 {
-  "item.wendigo.flesh": "Villager Flesh"
+  "item.wendigo.flesh": "Villager Flesh",
+  "item.wendigo.flaying_blade": "Flaying Blade"
+
 }
