get base block for Cow Engine working

--- a/src/main/resources/assets/wendigo/lang/en_us.json
+++ b/src/main/resources/assets/wendigo/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "item.wendigo.flesh": "Villager Flesh",
-  "item.wendigo.flaying_blade": "Flaying Blade"
-
+  "item.wendigo.flaying_blade": "Flaying Blade",
+  "item.wendigo.cow_engine" : "Cow Engine",
+  "block.wendigo.cow_engine": "Cow Engine"
 }
